# openmetadata-pulse

./: .env.example  .gitignore  AI_DISCLOSURE.md  CLAUDE.md  Dockerfile  LICENSE  Progress.md  README.md  TaskSync.md  docker-compose.yml  pyproject.toml
.github/workflows/: auto-review-assign.yml  auto-review.yml
Plan/Architecture/: APIContract.md  CLAUDETemplate.md  CodingStandards.md  DataModel.md  Overview.md
Plan/Demo/: Narrative.md  SubmissionChecklist.md
Plan/Project/: NFRs.md  PRD.md
docs/: COMPETITIVE_ANALYSIS.md  DEMO_NARRATIVE.md  setup-webhook.md
scripts/: configure_webhook.py  seed_om.py
src/pulse/: __init__.py  bot.py  config.py  dashboard_api.py  exceptions.py  governance.py  lineage_view.py  notifier.py  om_client.py  query_engine.py  resilience.py  server.py  templates.py  webhook_receiver.py
tests/: test_bot.py  test_governance.py  test_integration.py  test_lineage_view.py  test_notifier.py  test_om_client.py  test_query_engine.py  test_resilience.py  test_templates.py  test_webhook.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src/components/: EventFeed.tsx  Header.tsx  PlaceholderChart.tsx  Sidebar.tsx  StatCard.tsx
ui/src/lib/: sse.ts
