[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "openmetadata-pulse"
version = "0.1.0"
description = "AI-Powered Slack Bot & Team Collaboration Hub for OpenMetadata"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Data Dudes", email = "s.nishanth2002@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "data-ai-sdk[langchain]",
    "slack-bolt>=1.18,<2",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "langchain-openai>=0.1,<1",
    "langchain>=0.2,<1",
    "structlog>=24.1,<25",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "coverage>=7,<8",
]

[project.scripts]
pulse = "pulse.bot:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
